# Agentic-Additive-Manufacturing-Alloy-Discovery

./: .gitignore  README.md  main.py  pyproject.toml
out_known_alloys/iron_process_map/materials/: IRON_002C.json
